fix responsive font sizes on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,9 +326,9 @@ border-radius: 22px;
         --h1-font-size: min(max(36px, 8.6956vw), 56px);
         --h2-font-size: min(max(30px,  8.6956vw), 48px);
         --h3-font-size: min(max(28px, 3.3333vw), 48px);
-        --h4-font-size: min(max(24px, 2.5vw), 36px);
-        --h5-font-size: min(max(16px, 4.3478vw), 28px);
-        --sub-heading-font-size: 24px;
+        --h4-font-size: min(max(24px, 8.6956vw), 42px);
+        --h5-font-size: min(max(18px, 4.3478vw), 28px);
+        --sub-heading-font-size: min(max(16px, 5.797vw), 28px);
         --body-text-font-size: min(max(14px,3.3816vw), 18px);
         --small-text-font-size: 8px;
     }
